--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header-img {
   width: 100%;
 }
 
@@ -44,22 +44,12 @@ body {
   display: flex;
 }
 
-ul {
+.tasks-list {
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
 
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button{
-  outline: none;
-}
-
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -67,15 +57,15 @@ button {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
+  outline: none;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +75,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.text-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,78 +86,76 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  outline: none;
 }
 
-input[type="text"]:focus {
+.text-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-row {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
+  list-style: none;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.task-row .task-state {
   margin: 0 10px;
 }
 
-li > label {
+.task-row .task-row-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+.task-row .text-input {
   width: 226px;
 }
 
-button.delete img {
+.btn.delete .btn-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.btn.delete .btn-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-row .task-row-input {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.task-row.edit-mode .task-row-input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.task-row.edit-mode .task-row-label {
   display: none;
 }
