--- a/style.css
+++ b/style.css
@@ -5,6 +5,39 @@
   font-family: Lato, sans-serif;
 }
 
+.btn {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn:hover {
+  color: #3a3a3a;
+}
+
+.text-input {
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+  outline: none;
+}
+
+.text-input:focus {
+  color: #333;
+}
+
 /* Header */
 .header {
   width: 500px;
@@ -27,63 +60,6 @@
   }
 }
 
-/* Main */
-.main {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task-section__list {
-  margin: 0;
-  padding: 0;
-}
-
-.btn {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-  outline: none;
-}
-
-.btn:hover {
-  color: #3a3a3a;
-}
-
-/* Heading */
-.task-section__title {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
-  display: block;
-}
-
-.text-input {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #fff;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
-  outline: none;
-}
-
-.text-input:focus {
-  color: #333;
-}
-
 /* New Task */
 .new-task-wrapper {
   display: flex;
@@ -96,13 +72,35 @@
   width: 318px;
 }
 
+/* Main content */
+.main {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+
+.task-section__title {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+  display: block;
+}
+
+.task-section__list {
+  margin: 0;
+  padding: 0;
+}
+
 /* Task list */
 .task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
   list-style: none;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -138,7 +136,7 @@
 }
 
 /* Edit Task */
-.task-item .task-item__input {
+.task-item__input {
   width: 56%;
   flex-grow: 1;
   display: none;
